--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -1,26 +1,27 @@
 .btn {
   background-color: var(--color-primary-light);
   border-color: var(--color-primary);
-  color: var(--color-accent);
+  color: var(--color-text);
+  border-radius: 10px;
 }
 
 .btn:hover {
   background-color: var(--color-primary);
   border-color: var(--color-primary);
-  color: var(--color-accent);
+  color: var(--color-text);
 }
 
 .btn-ghost {
   background-color: transparent;
-  color: var(--color-primary);
+  color: var(--color-text);
 }
 
 .btn-ghost:hover {
-  color: var(--color-accent);
+  color: var(--color-text);
 }
 
 .btn-light {
   background-color: var(--color-extra);
   border-color: var(--color-primary);
-  color: var(--color-accent);
+  color: var(--color-text);
 }
