--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -1,12 +1,12 @@
-.previous, .next {
+.previous, .next, .page {
   text-decoration: none;
   display: inline-block;
   background-color: var(--color-extra);
-  color: var(--color-secondary);
-  border-radius: 30%;
+  color: var(--color-text);
+  border-radius: 35%;
 }
 
-.previous:hover, .next:hover {
+.previous:hover, .next:hover, .page:hover {
   background-color: var(--color-primary);
   color: var(--color-accent);
 }
