--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -1,17 +1,12 @@
 .card {
   box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
   border-radius: 20px;
-  width: 30%;
   background-color: var(--color-text);
   text-align: center;
 }
 
 .image {
   border-radius: 20px 20px 0 0;
-}
-
-.price {
-  color: var(--color-bg);
 }
 
 .desc {
@@ -27,7 +22,25 @@
   box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 20px;
-  width: 50%;
   background-color: var(--color-text);
   text-align: center;
+}
+
+.top-banner {
+  box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background-color: var(--color-text);
+  text-align: center;
+}
+
+.gallery {
+  border-radius: 0;
+}
+
+.micro {
+  color: var(--color-text);
+}
+
+.price {
+  color: var(--color-secondary);
 }
