Add new libraries

--- a/css/theme.css
+++ b/css/theme.css
@@ -8,7 +8,7 @@
   --color-text: #e2e2de;
 
   --font-primary: Raleway, sans-serif;
-  --font-secondary: Baloo, cursive;
+  --font-secondary: "Bree Serif", serif;
 }
 
 html {
