--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -10,3 +10,19 @@
   background-color: var(--color-primary);
   color: var(--color-accent);
 }
+
+section {
+  background-color: var(--color-text);
+}
+
+.head {
+  border-bottom: 3px solid var(--color-primary);
+}
+
+.body {
+  color: var(--color-secondary);
+}
+
+.peta {
+  color: var(--color-text);
+}
