--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,10 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>GeoHub</title>
+  <title>Gametron</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway&display=swap">
+  <link rel="stylesheet" href="/css/main.css">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
